  prefix.
* Mark many more messages for translation.
* Put the user-visible copyright messages in a central place.
* Allow effects to be toggled on and off by MIDI (patch from Scott
  Davidson).
* Add de_DE translation (patch from Sebastian Arnold).
* Assign default control values to the correct controls (reported by Tim
  Goetze).


1.4.5:
* JACK connection loss now employs automatic reconnect
* widgets controlled via MIDI now get all their channels updated
* added french translation
* applied patch from Mark Vitek that supports the latest LASH API changes
* corrected MIDI controller numbering (reported by James Stone)
* internal: introduced flexible status and error handlers
* (now maintained by Adam Sampson)
* Various cleanups to the source code.
* Use the new GTK about dialog and toolbar APIs (the major effect of
  which is that the "add" button in the toolbar now looks different).
* Use the correct dialogs when opening and saving files.
* Disconnect safely from JACK upon shutdown (patch from Florian Paul
  Schmidt).
* Make the configure script check for the LADSPA header.
* Fix LASH support (reported by Brian Dunn).



1.4.4:
* user may specify a rack file to be loaded at startup now
* removed references to jack_set_server_dir


1.4.3:

* updated for ladcca 0.4.0


1.4.2:

* fixed some segfaults
* fixed some bad configure script checks
* i18n support and Russian translation, courtesy of Alexey Voinov and
  Alexandre Prokoudine

1.4.1:

* icon and .desktop get installed properly
* much more graceful handling of jackd shutdowns
* midi thread will now try and use SCHED_FIFO.  If you run jackd with
  jackstart then you don't need to do anything to enable this as jackd will
  give the appropriate rights to jack rack.


1.4.0:

* MIDI support


1.3.0:

* you can now use plugins with unequal numbers of input and output ports. 
  any excess ports get exposed as extra jack ports with names like
  "amplif_1-1_i2", of the form 